latest code changes

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,6 +1,6 @@
 <!--<div ui-view="leftMenu"></div>-->
 
-   <nav class="left-menu" ui-view="leftMenu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}"> </nav>
+   <nav class="left-menu" ui-view="leftMenuBlock" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}"> </nav>
    <nav class="top-menu" ui-view="topMenu" ng-class="{'hidden-top-menu': hideTopMenu}"></nav>
    <!--<div ui-view="topMenu"></div>-->
 <section class="page-content" ui-view></section>
