--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -31,13 +31,14 @@
                     Login Form
                 </h3>
                 <br />
-                <form id="form-validation" name="form-validation"  ng-submit="goToDashboard();" novalidate>
+                <form id="form-validation" name="form-validation"  ng-submit="goToDashboard(user);" novalidate>
                     <div class="form-group">
                         <input id="validation-email"
                                class="form-control"
                                placeholder="Email or Username"
                                name="validation[email]"
                                type="text"
+                               ng-model="user.username"
                                data-validation="[EMAIL]">
                     </div>
                     <div class="form-group">
@@ -45,6 +46,7 @@
                                class="form-control password"
                                name="validation[password]"
                                type="password" data-validation="[L>=6]"
+                                 ng-model="user.password"
                                data-validation-message="$ must be at least 6 characters"
                                placeholder="Password">
                     </div>
@@ -85,15 +87,15 @@
         $('body').addClass('single-page single-page-inverse');
 
         // Form Validation
-        $('#form-validation').validate({
-            submit: {
-                settings: {
-                    inputContainer: '.form-group',
-                    errorListClass: 'form-control-error',
-                    errorClass: 'has-danger'
-                }
-            }
-        });
+        // $('#form-validation').validate({
+        //     submit: {
+        //         settings: {
+        //             inputContainer: '.form-group',
+        //             errorListClass: 'form-control-error',
+        //             errorClass: 'has-danger'
+        //         }
+        //     }
+        // });
 
         // Show/Hide Password
         $('.password').password({
