--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -38,7 +38,7 @@
                                placeholder="Email or Username"
                                name="validation[email]"
                                type="text"
-                               ng-model="user.username"
+                               ng-model="user.identifier"
                                data-validation="[EMAIL]">
                     </div>
                     <div class="form-group">
@@ -96,6 +96,7 @@
         //         }
         //     }
         // });
+
 
         // Show/Hide Password
         $('.password').password({
