users list code changes

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -551,4 +551,5 @@
 </body>
  <script src="assets/common/js/common.js"></script>
     <script src="assets/common/js/demo.temp.js"></script>
+        <script src="assets/vendors/dirpagenation/dirPagination.js"></script>
 </html>
