sale list code changes

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="assets/common/css/source/external.css">        
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="assets/common/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/common/css/star-rating.css">
     
 
     <!-- Vendors Scripts -->
@@ -549,7 +550,9 @@
 <div class="main-backdrop"><!-- --></div>
 
 </body>
+
  <script src="assets/common/js/common.js"></script>
     <script src="assets/common/js/demo.temp.js"></script>
         <script src="assets/vendors/dirpagenation/dirPagination.js"></script>
+                <script src="assets/vendors/ratings/rating.js"></script>
 </html>
