--- a/src/app/sales-list/sales-list.html
+++ b/src/app/sales-list/sales-list.html
@@ -4,39 +4,88 @@
     <section class="panel panel-with-borders">
         <div class="panel-heading">
             <h2>
-               
-                
-                
-                <div class="right hidden-lg-down margin-left-20 pull-right">
-                <div class="search-block">
-                    <div class="form-input-icon form-input-icon-right">
-                        <i class="icmn-search"></i>
-                        <input type="text" ng-model="salesSearch" class="form-control form-control-sm form-control-rounded" placeholder="Search...">
-                        <button type="submit" class="search-block-submit "></button>
-                    </div>
-                </div>
-            </div>
-                Sales List
+                             Sales List
+              
             </h2>
-            
+             
+                            
              
         </div>
+          <div class="panel-body">
+            <h4>
+                 Filters
+                 
+            </h4>
+            <div class="col-xs-12">
+                 <div class="col-xs-3  ">
+                     <div class="form-group row">
+                                <div class="col-md-3">
+                                    <label class="form-control-label" for="l0">Search </label>
+                                </div>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control" ng-model="search.name" placeholder="Search keyword" id="l0">
+                                </div>
+                            </div>
+                  </div>
+                 <div class="col-xs-4">
+                     <div class="form-group row">
+                                <div class="col-md-3">
+                                    <label class="form-control-label" for="l0">Vendors </label>
+                                </div>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="searchvendor" ng-model="search.vendor" ng-options="vendors.id as vendors.firstName for vendors in vendorList " >
+                                        <option value=""  selected >All</option>
+                                        
+                                        
+                                    </select>
+                                </div>
+                            </div>
+                     
+                  </div>
+                  <div class="col-xs-3">
+                     <div class="form-group row">
+                                <div class="col-md-3">
+                                    <label class="form-control-label" for="l0">Status </label>
+                                </div>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="searchstatus" ng-model="search.status">
+                                        <option value="" selected >All</option>
+                                        <option value="SALE_APPROVED">Approved</option>
+                                        <option value="SALE_FROZEN">Frozen</option>
+                                        <option value="SALE_REJECTED">Rejected</option>
+                                        
+                                    </select>
+                                </div>
+                            </div>
+                     
+                  </div>
           
+                   <div class="col-xs-2"><a href="javascript: void(0);" class="pull-right btn btn-primary" ng-click="resetFilters()">Reset</a></div>
+            </div>
+        </div>
         <div class="panel-body">
 
             <div class="cui-ecommerce--catalog">
               
                 <div class="row">
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" ng-repeat="sales in salesList  | filter :{ title : salesSearch}">
+                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" ng-repeat="sales in salesList  | filter :{ title : search.name,owner:search.vendor,status:search.status}">
                         <div class="cui-ecommerce--catalog--item">
                             <div class="cui-ecommerce--catalog--item--img">
-                                <div class="cui-ecommerce--catalog--item--status">
-                                    <span class="cui-ecommerce--catalog--item--status--title">New</span>
+                                <div class="cui-ecommerce--catalog--item--status" ng-if="sales.status">
+                                    <span class="cui-ecommerce--catalog--item--status--title" ng-if="sales.status == 'SALE_APPROVED'">APPROVED</span>
+                                    <span class="cui-ecommerce--catalog--item--status--title" ng-if="sales.status == 'SALE_REJECTED'">REJECTED</span>
+                                    <span class="cui-ecommerce--catalog--item--status--title" ng-if="sales.status == 'SALE_FROZEN'">FROZEN</span>
+
                                 </div>
                                 <div class="cui-ecommerce--catalog--item--like cui-ecommerce--catalog--item--like__selected">
-                                    <i class="icmn-heart3 cui-ecommerce--catalog--item--like--liked"><!-- --></i>
-                                    <i class="icmn-heart4 cui-ecommerce--catalog--item--like--unliked"><!-- --></i>
+                                    <i class="icmn-file-eye cui-ecommerce--catalog--item--like--liked" data-toggle="modal" data-target="#saleDetails" ng-click="saleDetails(sales);"> </i>
+                                    
                                 </div>
+                                <!--<div class="cui-ecommerce--catalog--item--like cui-ecommerce--catalog--item--like__selected">
+                                    <i class="icmn-bin cui-ecommerce--catalog--item--like--liked" data-toggle="modal" data-target="#saleDetails" ng-click="saleDetails(sales);"> </i>
+                                    
+                                </div>-->
+                                
                                 <a href="javascript: void(0);">
                                     <img ng-src="{{sales.sale_image.imageURL}}"  alt="{{sales.sale_image.filename}}"/>
                                 </a>
@@ -44,9 +93,10 @@
                             <div class="cui-ecommerce--catalog--item--title">
                                 <a href="javascript: void(0);">{{sales.title}}</a>
                                 <div class="cui-ecommerce--catalog--item--price">
-                                    $678.00
-                                    <div class="cui-ecommerce--catalog--item--price--old">
-                                        $754.00
+                                    <!--$678.00-->
+                                 {{sales.percentageFinalSalePrice | currency:currency}}
+                                    <div ng-show="discountExists(sales.discount_percentage)" class="cui-ecommerce--catalog--item--price--old" >
+                                        {{sales.total_price | currency:currency}}  ( {{sales.discount_percentage}}% Discount )
                                     </div>
                                 </div>
                             </div>
@@ -56,7 +106,8 @@
                                     <span data-toggle="tooltip" data-placement="right" title="Size M">M</span>
                                     <span data-toggle="tooltip" data-placement="right" title="Size XL">XL</span>
                                 </div>
-                                Including Lenses
+                               <div star-rating stars="5" outer-star-selection="stars" outer-percent="rating"   star-radius="10" rating-stars="{{sales.ratings}}"  star-radius="10" sel-color="gold" back-color="white"></div>
+                                <button type="button" id="notify-warning" class="btn btn-warning" ng-click="blockSaleConfirm(sales)"  >Block</button>
                             </div>
                         </div>
                     </div>
@@ -70,7 +121,110 @@
 </div>
 
 
-
+<!-- modal popup to Sale details-->
+ <div class="modal fade" id="saleDetails" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">Slae Details</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="table-responsive">
+                            <table class="table table-hover">
+                                <colgroup>
+                                    <col class="col-xs-4">
+                                    <col class="col-xs-8">
+                                </colgroup>
+                                
+                                <tbody>
+                                    
+                                    
+                                <tr>
+                                    <td class="text-nowrap">
+                                   Sale Title
+                                    </td>
+                                    <td>{{modalDetials.title}}</td>
+                                </tr>
+                                  <tr>
+                                    <td class="text-nowrap">
+                                        Sale Image
+                                    </td>
+                                    <td><a href="javascript: void(0);" class="cui-ecommerce--dashboard--list--img"><img ng-src="{{modalDetials.sale_image.imageURL}}" /></a> </td>
+                                 </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                       Start Date
+                                    </td>
+                                    <td>{{modalDetials.start_date | date : 'yyyy-MM-dd'}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                        End Date
+                                    </td>
+                                    <td>{{modalDetials.end_date | date : 'yyyy-MM-dd'}}</td>
+                                </tr>
+                                
+                                <tr>
+                                    <td class="text-nowrap">
+                                    Sale Quantity 
+                                    </td>
+                                    <td>{{modalDetials.quantity}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                       Price
+                                    </td>
+                                    <td>{{modalDetials.total_price | currency:currency }} <span ng-show="discountExists(modalDetials.discount_percentage)"> {{modalDetials.total_price | currency:currency}}  ( {{modalDetials.discount_percentage}}% Discount )</span></td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                       Total Sold
+                                    </td>
+                                    <td>{{modalDetials.sold_quantity + modalDetials.sold_MGP_quantity }}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                       Created Date
+                                    </td>
+                                    <td>{{modalDetials.createdAt | date : 'yyyy-MM-dd'}}</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                     Discount percentage
+                                    </td>
+                                    <td>{{modalDetials.discount_percentage}} </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-nowrap">
+                                     Sale Items
+                                    </td>
+                                    <td><span ng-repeat="items in modalDetials.sale_items">{{items.id}} <span ng-repeat="variants in items.variants">{{variants}}</span> </span> </td>
+                                </tr>
+ 
+                                <tr>
+                                    <td class="text-nowrap">
+                                       Sale Discounts
+                                    </td>
+                                    <td><span ng-repeat="discounts in modalDetials.sale_discounts">sale Quantity  :{{discounts.sale_qty}} ,Sale Discount :{{discounts.sale_discount_percentage}} </span><br></td>
+                                </tr>
+                                
+                                 
+                                </tbody>
+                            </table>
+                        </div>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                            <p>{{modalDetials}}</p>-->
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn" data-dismiss="modal">Close</button>
+                                 
+                            </div>
+                        </div>
+                    </div>
+                </div>
 <!-- Page Scripts -->
 <script>
 
@@ -83,6 +237,15 @@
         $("[data-toggle=tooltip]").tooltip();
 
     });
+
+    $('#notify-warning').on('click', function() {
+            $.notify({
+                title: '<strong>Heads up!</strong>',
+                message: 'You can use any of bootstraps other alert styles as well by default.'
+            },{
+                type: 'warning'
+            });
+        });
 
 </script>
 <!-- End Page Scripts -->
