--- a/src/assets/common/css/main.scss
+++ b/src/assets/common/css/main.scss
@@ -58,6 +58,7 @@
 @import 'vendors/juqery-steps';
 @import 'vendors/bootstrap-select';
 @import 'vendors/dropify';
+@import 'vendors/modification';
 
 // Pages
 @import 'pages/pricing-table';
